--- a/index.html
+++ b/index.html
@@ -1,71 +1,147 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Suryansh – Civil Engineering Student | Future Site Engineer</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Suryansh — Civil Engineering Student | Future Site Engineer</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header class="site-header" id="siteHeader">
+    <div class="container header-inner">
+      <div class="brand">
+        <div class="brand-title">Suryansh</div>
+        <div class="brand-sub">Civil Engineering Student | Future Site Engineer</div>
+      </div>
+      <nav class="nav">
+        <a href="#about">About</a>
+        <a href="#education">Education</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+      </nav>
+      <div class="controls">
+        <button id="themeToggle" aria-label="Toggle color theme" class="icon-btn">🌙</button>
+      </div>
+    </div>
+  </header>
 
-<header>
-  <h1>Suryansh</h1>
-  <p>Civil Engineering Student | Future Site Engineer</p>
-</header>
+  <main>
+    <section class="hero" id="hero">
+      <div class="container hero-inner">
+        <div class="hero-content">
+          <h1 class="hero-title">Suryansh</h1>
+          <p class="hero-sub">Civil Engineering Student | Future Site Engineer</p>
+          <p class="hero-desc">Passionate about sustainable construction, structural design, and leveraging AI tools to shape the future of engineering.</p>
+          <div class="hero-actions">
+            <a class="btn primary" href="#projects">View My Work</a>
+            <a class="btn ghost" href="#contact">Get in Touch</a>
+          </div>
+          <div class="social-row">
+            <a href="https://www.instagram.com/ksp_suryansh" target="_blank" rel="noopener">Instagram</a>
+            <a href="https://x.com/KasyapSuryansh" target="_blank" rel="noopener">X</a>
+          </div>
+        </div>
+        <div class="hero-media">
+          <!-- Place your profile image at assets/profile.jpg (recommended: 800x800 or square) -->
+          <div class="profile-glass">
+            <img src="assets/profile.jpg" alt="Suryansh profile" id="profileImg">
+          </div>
+        </div>
+      </div>
+    </section>
 
-<section id="about" data-aos="fade-up">
-  <h2>About Me</h2>
-  <p>I’m a passionate Civil Engineering student interested in sustainable construction, structural design, and the use of AI tools in engineering.</p>
-</section>
+    <section id="about" class="section fade-in">
+      <div class="container two-col">
+        <div class="col">
+          <h2>About Me</h2>
+          <p>Hello! I'm <strong>Suryansh</strong>, a dedicated Civil Engineering student passionate about creating sustainable and innovative solutions for tomorrow’s infrastructure challenges. I specialize in <strong>structural design</strong> and sustainable construction practices and integrate <strong>AI tools</strong> into engineering workflows for better efficiency and precision.</p>
+          <div class="tags">
+            <span>Structural Design</span><span>Sustainable Construction</span><span>AI Tools</span>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card small">
+            <h3>Education</h3>
+            <p><strong>Diploma in Civil Engineering — 3rd Year</strong><br>Government Polytechnic Changipur Noorpur, Bijnor</p>
+          </div>
+          <div class="card small">
+            <h3>Habits</h3>
+            <ul>
+              <li>Time management &amp; consistency</li>
+              <li>Reading on modern construction and AI</li>
+              <li>Teamwork &amp; presentation skills</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
 
-<section id="education" data-aos="fade-up">
-  <h2>Education</h2>
-  <p>Diploma in Civil Engineering – 3rd Year<br>Government Polytechnic Changipur Noorpur Bijnor (3 Years)</p>
-</section>
+    <section id="skills" class="section fade-in">
+      <div class="container">
+        <h2>Skills</h2>
+        <div class="skills-grid">
+          <div class="skill"><div class="icon">📐</div><div class="label">AutoCAD</div></div>
+          <div class="skill"><div class="icon">📊</div><div class="label">MS Excel</div></div>
+          <div class="skill"><div class="icon">🤖</div><div class="label">Beginner AI</div></div>
+          <div class="skill"><div class="icon">📑</div><div class="label">PowerPoint</div></div>
+        </div>
+      </div>
+    </section>
 
-<section id="skills" data-aos="fade-up">
-  <h2>Skills</h2>
-  <ul>
-    <li>AutoCAD</li>
-    <li>MS Excel</li>
-    <li>AI (Beginner Level)</li>
-    <li>PowerPoint (PPT)</li>
-  </ul>
-</section>
+    <section id="projects" class="section fade-in">
+      <div class="container">
+        <h2>Projects</h2>
+        <div class="projects-grid">
+          <article class="project-card">
+            <div class="project-media">
+              <img src="https://drive.google.com/uc?export=view&id=1C3GR7J7xoSJfer_rfgZWhHG3AWACsER5" alt="2D House Design">
+            </div>
+            <div class="project-body">
+              <h3>2 House Design</h3>
+              <p>This design was created in AutoCAD 3D and rendered for visualization.</p>
+              <a class="link" href="https://drive.google.com/file/d/1C3GR7J7xoSJfer_rfgZWhHG3AWACsER5/view?usp=drivesdk" target="_blank" rel="noopener">View Design</a>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
 
-<section id="projects" data-aos="fade-up">
-  <h2>Projects</h2>
-  <div class="card">
-    <h3>2 House Design</h3>
-    <p>This design was created in AutoCAD 3D and rendered beautifully.</p>
-    <a href="https://drive.google.com/file/d/1C3GR7J7xoSJfer_rfgZWhHG3AWACsER5/view?usp=drivesdk" target="_blank">View Design</a>
-  </div>
-</section>
+    <section id="contact" class="section fade-in">
+      <div class="container">
+        <h2>Contact</h2>
+        <p>Fill the form or message me directly on WhatsApp.</p>
+        <div class="contact-grid">
+          <form class="card form-card" action="https://formspree.io/f/mrgnplra" method="POST">
+            <label><span>Name</span><input type="text" name="name" required></label>
+            <label><span>Email</span><input type="email" name="email" required></label>
+            <label><span>Message</span><textarea name="message" rows="5" required></textarea></label>
+            <div class="form-actions">
+              <button class="btn primary" type="submit">Send Message</button>
+              <a class="btn ghost" href="mailto:suryanshg821@gmail.com">Email Me</a>
+            </div>
+          </form>
+          <div class="card contact-info">
+            <h3>Or chat on WhatsApp</h3>
+            <p>Quick response via WhatsApp.</p>
+            <a class="btn whatsapp" href="https://wa.me/918957131881?text=Hi%20Suryansh!%20I%20saw%20your%20portfolio." target="_blank" rel="noopener">Chat on WhatsApp</a>
+            <div class="contact-list">
+              <p><strong>Email</strong><br><a href="mailto:suryanshg821@gmail.com">suryanshg821@gmail.com</a></p>
+              <p><strong>Phone</strong><br><a href="tel:+918957131881">+91 89571 31881</a></p>
+              <p class="socials"><a href="https://www.instagram.com/ksp_suryansh" target="_blank">Instagram</a> • <a href="https://x.com/KasyapSuryansh" target="_blank">X</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
-<section id="habits" data-aos="fade-up">
-  <h2>Habits</h2>
-  <ul>
-    <li>Time management and consistency</li>
-    <li>Reading about modern construction and AI tools</li>
-    <li>Teamwork and presentation skills</li>
-  </ul>
-</section>
+  <footer class="site-footer">
+    <div class="container">
+      <p>© 2025 Suryansh. Designed with care.</p>
+    </div>
+  </footer>
 
-<section id="contact" data-aos="fade-up">
-  <h2>Contact</h2>
-  <p>Email: <a href="mailto:suryanshg821@gmail.com">suryanshg821@gmail.com</a></p>
-  <p>Phone: 8957131881</p>
-  <p><a href="https://www.instagram.com/ksp_suryansh">Instagram</a> | 
-     <a href="https://x.com/KasyapSuryansh">Twitter</a></p>
-  <button onclick="alert('Thank you for visiting!')">Get in Touch</button>
-</section>
-
-<footer>
-  <p>© 2025 Suryansh | Designed with 💙</p>
-</footer>
-
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>AOS.init();</script>
+  <script src="script.js"></script>
 </body>
 </html>
