--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
                 <div class="project-grid reveal" style="transition-delay: 0.2s;">
                     
                     <div class="project-card glass-card reveal-child" style="--child-index: 1;">
-                        <img src="https://drive.google.com/uc?id=1C3GR7J7xoSJfer_rfgZWhHG3AWACsER5" alt="2D House Design">
+                        <img src="https://drive.google.com/file/d/1C3GR7J7xoSJfer_rfgZWhHG3AWACsER5/view?usp=drivesdk" alt="2D House Design">
                         <div class="project-info">
                             <h3>2D House Design</h3>
                             <p>
@@ -960,3 +960,4 @@
 
 </body>
 </html>
+
